# itu-sdse-project-RGOFV

./: .daggerignore  .gitignore  01_data.py  1  README.md  dagger.go  dagger.yml  go.mod  go.sum  pipeline.go  requirements.txt  test.py
artifacts/: lead_model_lr.pkl  model.pkl  (+6 more)
cookiecutter_pipeline/itu-sdse-project-rgofv/: Makefile  README.md  check_columns.py  main.py  pyproject.toml  repro_build_loss.py  requirements.txt  verification_result.txt  verify_fix.py  verify_full_pipeline_logic.py  verify_prepare.py
cookiecutter_pipeline/itu-sdse-project-rgofv/base_data/: raw_data.csv  raw_data.csv.dvc
cookiecutter_pipeline/itu-sdse-project-rgofv/base_data/.dvc/: config
cookiecutter_pipeline/itu-sdse-project-rgofv/docs/: mkdocs.yml
cookiecutter_pipeline/itu-sdse-project-rgofv/docs/docs/: index.md
cookiecutter_pipeline/itu-sdse-project-rgofv/mlops_pipeline/: __init__.py  config.py  dataset.py  features.py  features_cli.py  full_pipeline.py  plots.py
cookiecutter_pipeline/itu-sdse-project-rgofv/mlops_pipeline/cli/: app.py
cookiecutter_pipeline/itu-sdse-project-rgofv/mlops_pipeline/data/: io.py  make_dataset.py  make_dataset02.py  prepare.py  prepare02.py
cookiecutter_pipeline/itu-sdse-project-rgofv/mlops_pipeline/features/: build_features.py
cookiecutter_pipeline/itu-sdse-project-rgofv/models/: classification_report_logreg_test.json  classification_report_logreg_train.json  classification_report_test.json  classification_report_train.json  classification_report_xgb_test.json  classification_report_xgb_train.json  lead_model_xgboost.json  scaler.pkl
(+860 files in other folders)
